syntax = "proto3";

package alb;

option go_package = "waypoint/builtin/aws/alb";

message TargetGroup {
  string arn = 1;
  string region = 2;
}

message Release {
  string url = 1;
  string load_balancer_arn = 2;
  string management_level = 3;
  string listener_arn = 4;
  string target_group_arn = 5;
  string security_group_id = 7;
  string zone_id = 8;
  string fqdn = 9;
}
